cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_424.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/s_server.c:1608: error: DEAD_STORE
  The value written to &argv (type unsigned char**) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/s_server.c:1608:5: Write of unused value
1606.       }
1607.       argc = opt_num_rest();
1608.       argv = opt_rest();
            ^
1609.   
1610.   #ifndef OPENSSL_NO_NEXTPROTONEG
